# lilac

./: .gitignore  README.md  entry_points.cfg  setup.cfg
lilac/ensemble/: ensemble_runner_base.py  ensemble_runner_factory.py  ensemble_runners.py  stacking_runner.py
lilac/evaluators/: evaluator_base.py  evaluator_factory.py
lilac/experiment/: arg_parse.py  run_experiment.py
lilac/features/: feature_aggregator.py  features_base.py  features_factory.py
lilac/features/generators/: category_encoding_features.py  combi_features.py  datetime_features.py  decomposition_features.py  extra_table_features.py  group_features.py  lag_features.py  order_features.py  pivot_table_features.py  raw_stats_features.py  text_rule_features.py  text_vectors.py
lilac/managers/: arg_parse.py  initialize.py  main.py  run.py  settings_generator.py
lilac/managers/resource/: initialize.py  run_experiment.py  settings_generator.py
lilac/managers/resources/: config.py  config_generator.py  experiment.py  (+1 more)
lilac/models/: model_base.py  model_factory.py
lilac/selectors/: feature_selector.py  importance_getter_factory.py  lgbm_importance_getters.py
lilac/tasks/: feature_generate.py  get_feature_importances.py  run_cv.py
lilac/trainers/: basic_trainer.py  down_sampling_bagging_trainer.py  trainer_factory.py
lilac/tuner/: optuna_params_factory.py  tasks_runner.py
lilac/utils/: utils.py
lilac/validators/: cross_validation_runner.py  folds_generator_factory.py  folds_generators.py  lgbm_adversarial_validator.py
samples/: adversarial_validation.ipynb  main.py
(+40 files in other folders)
