[metadata]
name = lilac
version = attr:lilac.__version__
author = guglilac
author_email = smartbowwow@gmail.com
description = Machine learning tool
long_description = file:README.md
url = https://smartbowwow.com
license = Apache License, Version 2.0
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    
[options]
zip_safe = False
packages = find:
entry_points = file:entry_points.cfg
install_requires =
    catboost==0.24.4
    fasttext==0.9.2
    gensim==3.6.0
    imbalanced-learn==0.7.0
    imblearn==0.0
    lightgbm==2.2.3
    luigi==3.0.1
    matplotlib>=2.0.2
    matplotlib-venn==0.11.6
    numpy==1.19.2
    numpydoc==0.7.0
    optuna==2.5.0
    pandas==1.1.4
    scikit-learn==0.23.2
    sklearn==0.0
    xfeat==0.1.1
    xgboost==1.3.3